--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
     <div class="main">
         <div id="board" class="board"></div>
 
-        <p>Jahn Veach <a href="mailto:j@hnvea.ch">j@hnvea.ch</a></p>
-        <p><a href="https://www.linkedin.com/in/jveach">LinkedIn</a> <a href="https://github.com/v64">GitHub</a></p>
+        <p>
+        Jahn Veach &middot;
+        <a href="mailto:j@hnvea.ch">j@hnvea.ch</a>
+        <br />
+        <a href="https://www.linkedin.com/in/jveach">LinkedIn</a> &middot;
+        <a href="https://github.com/v64">GitHub</a>
+        </p>
     </div>
 
     <script src="js/chess.js"></script>
