--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
 </head>
 
 <body>
-    <div class="main">
-        <div id="board" class="board"></div>
-
+    <div id="board" class="board"></div>
+    <div class="footer">
         <p>
         Jahn Veach &middot;
-        <a href="mailto:j@hnvea.ch">j@hnvea.ch</a>
-        <br />
+        <a href="mailto:j@hnvea.ch">j@hnvea.ch</a> &middot;
         <a href="https://www.linkedin.com/in/jveach">LinkedIn</a> &middot;
         <a href="https://github.com/v64">GitHub</a>
         </p>
