--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <div id="board" class="board"></div>
-    <div class="footer">
+    <div id="board"></div>
+    <div id="footer">
         <p>
         Jahn Veach &middot;
         <a href="mailto:j@hnvea.ch">j@hnvea.ch</a> &middot;
