cleaned up index

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!doctype html>
-<!-- Thanks to the following projects: -->
-<!-- https://github.com/nmrugg/stockfish.js -->
-<!-- https://github.com/oakmac/chessboardjs/ -->
-<!-- https://github.com/jhlywa/chess.js -->
-<!-- https://github.com/jquery/jquery -->
 
 <head>
     <title>Jahn Veach j@hnvea.ch</title>
@@ -15,10 +10,13 @@
     <div id="board"></div>
     <div id="footer">
         <p>
-        Jahn Veach &middot;
-        <a href="mailto:j@hnvea.ch">j@hnvea.ch</a> &middot;
-        <a href="https://www.linkedin.com/in/jveach">LinkedIn</a> &middot;
-        <a href="https://github.com/v64">GitHub</a>
+            <a href="http://jahnvea.ch/">Jahn Veach</a>
+            &middot;
+            <a href="mailto:j@hnvea.ch">j@hnvea.ch</a>
+            &middot;
+            <a href="https://www.linkedin.com/in/jveach">LinkedIn</a>
+            &middot;
+            <a href="https://github.com/v64">GitHub</a>
         </p>
     </div>
 
