--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Jahn Veach j@hnvea.ch</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis" />
     <link rel="stylesheet" href="css/chessboard.css" />
     <link rel="stylesheet" href="css/app.css" />
 </head>
