--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             &middot;
             <a href="mailto:j@hnvea.ch">j@hnvea.ch</a>
             &middot;
-            <a href="https://www.linkedin.com/in/jveach">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/jveach" target="_blank">LinkedIn</a>
             &middot;
-            <a href="https://github.com/v64">GitHub</a>
+            <a href="https://github.com/v64" target="_blank">GitHub</a>
         </p>
     </div>
 
